add js map for card

--- a/mentor.css
+++ b/mentor.css
@@ -2,6 +2,20 @@
   color: #004987;
 }
 
+#btn-more {
+  border: 2px solid #004987;
+  color: #004987;
+}
+
+#btn-register, #btn-more:hover {
+  color: white;
+  background-color: #004987;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
 @media (max-width:992) {
   #search-mentor {
     display:none;
