--- a/mentor/mentor.css
+++ b/mentor/mentor.css
@@ -7,7 +7,8 @@
   color: #004987;
 }
 
-#btn-register, #btn-more:hover {
+#btn-register,
+#btn-more:hover {
   color: white;
   background-color: #004987;
 }
@@ -16,9 +17,8 @@
   text-align: justify;
 }
 
-@media (max-width:992) {
+/* @media (max-width:992) {
   #search-mentor {
     display:none;
   }
-}
-
+} */
