add button in card bottom

--- a/mentor/mentor.css
+++ b/mentor/mentor.css
@@ -5,20 +5,21 @@
 #btn-more {
   border: 2px solid #004987;
   color: #004987;
+  transition: all 200ms ease-in-out;
 }
 
 #btn-register,
 #btn-more:hover {
   color: white;
   background-color: #004987;
+  transition: all 200ms ease-in-out;
+}
+
+#btn-next {
+  border: 2px solid #004987;
+  color: #004987;
 }
 
 .text-justify {
   text-align: justify;
 }
-
-/* @media (max-width:992) {
-  #search-mentor {
-    display:none;
-  }
-} */
