--- a/confirmation-page/confirm.css
+++ b/confirmation-page/confirm.css
@@ -46,13 +46,12 @@ a{
 
 /*Booking-Style*/
 
-.row {
+.bg-custom {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #F6FBFD;  
 }
-
 h3{
     font-size: 1.5rem;
 }
