--- a/Login-page/login.css
+++ b/Login-page/login.css
@@ -52,6 +52,7 @@ body {
 h3{
     font-family: "Vesper Libre", serif;
     font-weight: bold;
+    color: #333333;
 }
 
 .text-danger{
@@ -59,3 +60,6 @@ h3{
   justify-content: center;
 }
 
+a{
+  text-decoration: none;
+}
